implement get all patient logics
